--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/articles">Articles</a></li>
             </ul>
         {% endblock %}
     </div>
@@ -20,3 +21,4 @@
     </div>
     </body>
 </html>
+
