--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,26 +3,10 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-    <ul>
-        <li><a href="/register">Registration</a></li>
-    </ul>
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
-</form>
+    {{ form_end(form) }}
 {% endblock %}
