--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -1,12 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'blog/base.html.twig' %}
 {% block body %}
+    <div class="post">
     {{ form_start(form) }}
     {{ form_row(form.firstName) }}
     {{ form_row(form.lastName) }}
     {{ form_row(form.email) }}
     {{ form_row(form.password.first) }}
     {{ form_row(form.password.second) }}
-
-    <button type="submit">Register!</button>
-    {{ form_end(form) }}
+    <button class="btn btn-lg btn-primary buttn" type="submit">Register!</button>
+    {{ form_end(form) }}</div>
 {% endblock %}
