--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,10 @@
     <body>
     <div id="sidebar">
         {% block sidebar %}
-
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/blog">Blog</a></li>
+            </ul>
         {% endblock %}
     </div>
 
