--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -1,14 +1,10 @@
 {% extends 'blog/base.html.twig' %}
-
-{% block title %}Log in!{% endblock %}
-
+{% block title %}Create Article{% endblock %}
 {% block body %}
-<div class="post">
-    {{ form_start(form) }}
+    <div class="post"> {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn btn-lg btn-primary buttn" type="submit">
-        Sign in
+        Create
     </button>
-    {{ form_end(form) }}
-    </div>
+    {{ form_end(form) }}</div>
 {% endblock %}
