--- a/templates/blog/base.html.twig
+++ b/templates/blog/base.html.twig
@@ -36,7 +36,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="/admin">Admin</a>
                     <a class="dropdown-item" href="/post">Create Post</a>
                     <a class="dropdown-item" href="/logout">Logout</a>
                         {% else%}
