--- a/templates/security/admin.html.twig
+++ b/templates/security/admin.html.twig
@@ -1,17 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'blog/base.html.twig' %}
 {% block title %}Create Article{% endblock %}
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-lg btn-primary" type="submit">
-        Create
-    </button>
-    {{ form_end(form) }}
 
-    <ul><h2>Articles</h2>
-        {% for article in articles %}
-            <li>{{ article.id }}</li>
-            <li>{{ article.text | title}}</li>
-        {% endfor %}
-    </ul>
+
+    <ul class="blog-body clearfix">
+    {% for article in articles  %}
+       <div class="fggf">  <h2>{{ article.title | title}}</h2>
+
+
+        <div class="buttn_showgroup"> <a class="more" href="{{ path('admin/articles', { 'id': article.id }) }}">Show</a>
+        <a class="more" href="{{ path('delete/articles', { 'id': article.id }) }}">Delete</a>
+        <a class="more" href="{{ path('edit/articles', { 'id': article.id }) }}">Edit</a></div>
+        <div class="buttn_showcreate"> <a class="more" href="{{ path('create/articles', { 'id': article.id }) }}">Create</a></div></div>
+    {% endfor %}
+</ul>
+
 {% endblock %}
