--- a/templates/blog/articles.html.twig
+++ b/templates/blog/articles.html.twig
@@ -9,6 +9,10 @@
         {% for article in pagination  %}
             <h2>{{ article.title | title}}</h2>
            <div class="article-images"> <img src="{{ asset(['/images/', article.image]|join) }}" alt=""></div>
+            <tr>
+                <td>{{ article.createdAt|date('F j, Y') }}</td>,
+            </tr>
+            {{article.user.email}}
             <div class="article-body"> {{ article.body}}</div>
             <p><a class="more" href="{{ path('articles', { 'id': article.id }) }}">Read more...</a></p>
         {% endfor %}
