--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -8,6 +8,9 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    <button class="btn btn-lg btn-primary buttn" type="submit" label="update">
+        Update
+    </button>
     {{ form_end(form) }}
 {% endblock %}
 
