--- a/templates/blog/base.html.twig
+++ b/templates/blog/base.html.twig
@@ -22,7 +22,9 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
             <ul class="navbar-nav mr-auto">
-
+                <li class="nav-item">
+                    <a style="color: #fff;" class="nav-link" href="/profile">My Profile</a>
+                </li>
                 <li class="nav-item">
                     <a style="color: #fff;" class="nav-link" href="/contact">Contacts</a>
                 </li>
