--- a/templates/blog/base.html.twig
+++ b/templates/blog/base.html.twig
@@ -30,7 +30,7 @@
                 </li>
             </ul>
             <li class="nav-item dropdown" style="margin-right: 75px;">
-                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <img class="nav-profile-img rounded-circle" src="{{ asset('images/astronaut-profile.png') }}">
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
