--- a/templates/blog/article.html.twig
+++ b/templates/blog/article.html.twig
@@ -8,7 +8,8 @@
         <div class="article-blog"> <h2>{{ article.title | title}}</h2>
     <div class="article-images"><img src="{{ asset(['/images/', article.image]|join) }}" alt=""></div>
             <tr>
-                <td>{{ article.createdAt|date('F j, Y') }}</td>
+                <td>{{ article.createdAt|date('F j, Y') }}</td>;
+                <td>{{article.author.firstname}}</td>
             </tr>
     <div class="article-body"> {{ article.body}}</div>
 
@@ -22,14 +23,20 @@
         {% endif %}
          <h2>Comments</h2>
               {% for comment in comments %}
+                  <tr>
+                      <td>{{ comment.createdAt|date('F j, Y') }}</td>;
+                      <td>{{ comment.author.firstname}}</td>
+                  </tr>
                      <div class="her">{{ comment.body }}</div>
                         <br>
+
                 {% endfor %}
 
 
     <div class="comments-form">   {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         {{ form_start(form) }}
-        {{ form_row(form.body) }}</div>
+        {{ form_row(form.body) }}
+    </div>
 
         <div class="submit"> <button type="submit" class="btn btn-success buttn">Submit!</button>
         {{ form_end(form) }}
