--- a/templates/security/admin.html.twig
+++ b/templates/security/admin.html.twig
@@ -11,7 +11,7 @@
         <div class="buttn_showgroup"> <a class="more" href="{{ path('admin/articles', { 'id': article.id }) }}">Show</a>
         <a class="more" href="{{ path('delete/articles', { 'id': article.id }) }}">Delete</a>
         <a class="more" href="{{ path('edit/articles', { 'id': article.id }) }}">Edit</a></div>
-        <div class="buttn_showcreate"> <a class="more" href="{{ path('create/articles', { 'id': article.id }) }}">Create</a></div></div>
+        </div>
     {% endfor %}
 </ul>
 
