--- a/templates/security/admin.html.twig
+++ b/templates/security/admin.html.twig
@@ -4,6 +4,7 @@
 
 
     <ul class="blog-body clearfix">
+        <a class="more" href="{{ path('admin/dashboard') }}">Dashboard</a>
     {% for article in articles  %}
        <div class="fggf">  <h2>{{ article.title | title}}</h2>
 
